--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root {
+  --main_black: #000000;
+}
+
 *{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -20,14 +24,14 @@ header{
 
 .logo{
     text-decoration: none;
-    color: #3a6cf4;
+    color: var(--main_black);
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
 }
 
 .navigation a{
-    color: #3a6cf4;
+    color: var(--main_black);
     text-decoration: none;
     font-size: 1.1em;
     font-weight: 500;
@@ -78,7 +82,7 @@ section{
 
 .main-btn{
     color: white;
-    background-color: #3a6cf4;
+    background-color: var(--main_black);
     text-decoration: none;
     font-size: 1.1em;
     font-weight: 600;
@@ -108,7 +112,7 @@ section{
 .title{
     display: flex;
     justify-content: center;
-    color: #3a6cf4;
+    color: var(--main_black);
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
@@ -136,7 +140,7 @@ section{
 }
 
 .icon {
-    color: #3a6cf4;
+    color: var(--main_black);
     font-size: 8em;
     text-align: center;
 }
@@ -146,7 +150,7 @@ section{
 }
 
 .info h3{
-    color:#3a6cf4;
+    color:var(--main_black);
     font-size: 1.2em;
     font-weight: 700;
     margin: 10px;
@@ -227,7 +231,7 @@ section{
 }
 
 .footer-title span{
-    color: #3a6cf4;
+    color: var(--main_black);
 }
 
 .footer .social-icons a{
