--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ section{
 .main h2 span{
     display: inline-block;
     margin-top: 10px;
-    color: #4e9eff;
+    color: var(--main_black);
     font-size: 3em;
     font-weight: 600;
 }
@@ -95,7 +95,7 @@ section{
 }
 
 .main-btn:hover{
-    background-color: #0a49f6;
+    background-color: var(--main_black);
     transform: scale(1.1);
 }
 
